force-app/main/default/objects/position__c/fields/Annualrevenue__c.field-meta.xml
<CustomField>
    <fullName>Annualrevenue__c</fullName>
    <label>Annualrevenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>