force-app/main/default/objects/position__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <label>Hiring Manager</label>
    <referenceTo>Hiring_Manager__c</referenceTo>
    <relationshipLabel>positions</relationshipLabel>
    <relationshipName>positions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>