force-app/main/default/objects/position__c/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <label>location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>bangalore</fullName>
            </value>
            <value>
                <fullName>chenni</fullName>
            </value>
            <value>
                <fullName>hyderabad</fullName>
            </value>
            <value>
                <fullName>mumbai</fullName>
            </value>
            <value>
                <fullName>pune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>