force-app/main/default/objects/position__c/fields/maximum_pay__c.field-meta.xml
<CustomField>
    <fullName>maximum_pay__c</fullName>
    <label>maximum pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>