force-app/main/default/objects/position__c/fields/position__c.field-meta.xml
<CustomField>
    <fullName>position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>customer</label>
    <referenceTo>customer__c</referenceTo>
    <relationshipLabel>positions</relationshipLabel>
    <relationshipName>positions</relationshipName>
    <type>Lookup</type>
</CustomField>