force-app/main/default/objects/position__c/fields/position_Discription__c.field-meta.xml
<CustomField>
    <fullName>position_Discription__c</fullName>
    <label>position Discription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>