force-app/main/default/objects/position__c/fields/position_status__c.field-meta.xml
<CustomField>
    <fullName>position_status__c</fullName>
    <label>position status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>closed</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>new</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>