force-app/main/default/objects/position__c/fields/Recommend_for_Hire__c.field-meta.xml
<CustomField>
    <fullName>Recommend_for_Hire__c</fullName>
    <label>Recommend for Hire</label>
    <summaryForeignKey>candidate__c.positions__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>