force-app/main/default/objects/position__c/fields/reference_ID__c.field-meta.xml
<CustomField>
    <fullName>reference_ID__c</fullName>
    <displayFormat>ID-{0000}</displayFormat>
    <label>reference ID</label>
    <type>AutoNumber</type>
</CustomField>