force-app/main/default/objects/position__c/fields/vacancies__c.field-meta.xml
<CustomField>
    <fullName>vacancies__c</fullName>
    <label>vacancies</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>